--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,13 @@
     "@types/node": "^16.18.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "bootstrap": "^5.2.3",
+    "decimal.js": "^10.4.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.9.4",
-    "decimal.js": "^10.4.3"
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
