--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@types/node": "^16.18.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "axios": "^0.21.1",
     "bootstrap": "^5.2.3",
     "decimal.js": "^10.4.3",
+    "history": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.0.7",
+    "reselect": "^4.0.0",
     "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test --passWithNoTests"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +42,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@jedmao/redux-mock-store": "3.0.5",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.2.0",
+    "@types/faker": "5.5.8",
+    "@types/jest": "29.4.0",
+    "@types/react-redux": "7.1.25",
+    "axios-mock-adapter": "1.21.1",
+    "faker": "5.5.3",
+    "redux-devtools-extension": "2.13.9"
   }
 }
